<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">FirstApp</string>
	<string name="button_01">Web Browser</string>
	<string name="button_02">Second Activity</string>
	<string name="third_act_button">Go to 3rd</string>
	<string name="second_activity">A Second Activity</string>
	<string name="third_activity">A Set of widgets</string>
	<string name="third_radio">Radio selection</string>
	<string name="chk_ios">IPhone</string>
	<string name="chk_android">Android</string>
	<string name="chk_windows">Windows</string>
	<string name="btn_display">Display</string>
	<string name="prog_act_button_string">Progress Activity</string>
	<string name="progress_button">Make Progress</string>
	<string name="progress_activity">Progress Activity</string>
	<string name="popup_dialog_string">popup Dialog</string>
	<string name="prog_print_log">Print log</string>	
	<!-- Radio Buttons -->
	<string name="radio_male">Male</string>
	<string name="radio_female">Female</string>
	<string name="radio_other">Other</string>
	<string name="gender_display">Display Gender</string>
	<string name="third_act_toggle_on">Toggle On</string>
	<string name="third_act_toggle_off">Toggle Off</string>
	<string name="btn_a">A</string>
	<string name="btn_b">B</string>
    <string name="draw_button">Draw Button</string>


	<string name="log_view_text">Log Viewer</string>
	
	<string name="country_prompt">Choose a country</string><string name="progress_string">Prog</string><string name="start_audio">Start Start</string><string name="stop_audio">Stop Audio</string><string name="audio_button">Play Audio</string>

	<string-array name="country_array">
		<item>Malaysia</item>
		<item>United States</item>
		<item>Indonesia</item>
		<item>France</item>
		<item>Italy</item>
		<item>Singapore</item>
		<item>New Zealand</item>
		<item>India</item>
	</string-array>
			
</resources>
