<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
		android:id="@+id/act_02_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  />
	
	<CheckBox
		android:id="@+id/chkIos"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/chk_ios" />
	<CheckBox
		android:id="@+id/chkAndroid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/chk_android"
		android:checked="true" />
	<CheckBox
		android:id="@+id/chkWindows"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/chk_windows" />
	
	<Button
		android:id="@+id/btnDisplay"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_display" />

</LinearLayout>
